# lux-downloader

./: .gitignore  .oxfmtrc.json  Cargo.toml  Dockerfile  README.md  package.json  release.conf.ts  tsconfig.json  updates.xml
.github/workflows/: docker.yaml  release.yaml
docs/: api.md  extension_plan.md  plan.md  torrent_plan.md
extension/: .gitignore  README.md  package.json  tsconfig.json  tsconfig.script.json  updates.xml  wxt.config.ts
extension/entrypoints/: background.ts  link-interceptor.content.ts
extension/entrypoints/dashboard/: App.vue  index.html  types.ts  utils.ts
extension/entrypoints/dashboard/components/: BaseDialog.vue  ChangeSourceDialog.vue  RemoveTaskDialog.vue  SettingsCard.vue  TaskCreateForm.vue  TaskList.vue  TorrentDetailDialog.vue
extension/entrypoints/dashboard/composables/: dashboardState.ts  useDashboard.ts
extension/entrypoints/dashboard/composables/modules/: useConfigSettings.ts  useServerHealth.ts  useTaskManagement.ts  useTorrentDetails.ts
extension/entrypoints/popup/: App.vue  index.html
extension/scripts/: createUpdateFile.ts
extension/src/: shared.ts
scripts/: createUpdateFile.ts
src/: api.rs  auth.rs  config.rs  constants.rs  main.rs  models.rs  persistence.rs
src/backends/: ftp.rs  metalink.rs  mod.rs  sftp.rs  torrent.rs
src/backends/http_family/: io.rs  mod.rs  multi.rs  probe.rs  single.rs
src/backends/torrent/: cleanup.rs  mod.rs  options.rs  seeding.rs  session.rs  source.rs
src/scheduler/: error.rs  execution.rs  lifecycle.rs  metrics.rs  mod.rs  source.rs  transitions.rs
